h2001-03-30  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (parse_table): close_anchor at the begining of a
	new cell since <a> elements cannot span cells.  Remove it from the
	closing tag because that presumes there is a valid closing tag.
	We need more regression tests.
	
	* htmlengine.c (parse_table): close_anchor at the end of a row to
	make sure stray anchors don't wrap.

	* htmlclueflow.c (calc_padding): temporary hack to swtich to
	remove padding in the text/plain case.  This will get moved into
	the painter soon.
	(save_plain): use calc_padding based on the painter from the
	current engine and don't automatically assume it.

2001-03-29  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (gtk_html_build_with_gconf): helper function, returns
	TRUE if gtkhtml was built with gconf support. it's provided for
	scripting languages

	* htmlengine-edit-table.c (delete_table_row): updated
	(delete_row_undo_action): use DeleteCellsUndo data

	* htmltext.c (get_tags): added quotes

	* htmlengine-save.c (color_to_string): use %02x instead of %2x to
	avoid colors like <BODY BGCOLOR="#98cc 0">

	* htmlengine-edit-table.c (insert_table_row): fixed cursor
	position, added row_cells parameter
	(delete_row_setup_undo): rewritten to use cells data

2001-03-29  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (on_object): free the pointer_url before we set it to
	NULL.

2001-03-28  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-table.c (insert_table_column): added column
	parameter, when non-NULL, use it as newly created cell-places
	content
	(delete_column_setup_undo): use new undo data and remember deleted
	cells for later undo (insertion)

2001-03-27  Larry Ewing  <lewing@ximian.com>

	* htmliframe.c (destroy): disconnect the signals from the html
	widget that refer to the iframe since the iframe_created.
	(html_iframe_class_init): use the new destroy handler.

2001-03-26  Larry Ewing  <lewing@ximian.com>

	* keybindingsrc.emacs: disable autofill.
